--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
-baseurl = "/"
+baseurl = "https://keckcodeon.netlify.com/"
 languageCode = "en-us"
-title = "A Hugo website"
+title = "CodeOn! at Keck"
 theme = "hugo-lithium"
 googleAnalytics = ""
 disqusShortname = ""
@@ -14,13 +14,13 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
     url = "/about/"
 [[menu.main]]
     name = "GitHub"
-    url = "https://github.com/rstudio/blogdown"
+    url = "https://github.com/keckcodeon"
 [[menu.main]]
     name = "Twitter"
     url = "https://twitter.com/rstudio"
 
 [params]
-    description = "A website built through Hugo and blogdown."
+    description = "A website for CodeOn! students at USC"
 
     # options for highlight.js (version, additional languages, and theme)
     highlightjsVersion = "9.12.0"
