--- a/config.toml
+++ b/config.toml
@@ -32,7 +32,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
     MathJaxVersion = "2.7.5"
 
     [params.logo]
-    url = "logo.png"
+    url = "lugnut_icon.png"
     width = 50
     height = 50
     alt = "Logo"
