--- a/config.toml
+++ b/config.toml
@@ -13,6 +13,9 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
     name = "About"
     url = "/about/"
 [[menu.main]]
+    name = "Session Materials"
+    url = "/session_materials/"
+[[menu.main]]
     name = "GitHub"
     url = "https://github.com/keckcodeon"
 [[menu.main]]
