--- a/config.toml
+++ b/config.toml
@@ -18,6 +18,9 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
 [[menu.main]]
     name = "GitHub"
     url = "https://github.com/keckcodeon"
+[[menu.main]]
+    name = "Calendar"
+    url = "https://calendar.google.com/calendar/b/1/r"
 
 [params]
     description = "A website for CodeOn! students at USC"
