--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,4 @@
+publishDir = "../keckcodeon.github.io"
 baseurl = "https://keckcodeon.github.io/"
 languageCode = "en-us"
 title = "CodeOn! at Keck"
@@ -5,6 +6,7 @@ theme = "hugo-lithium"
 googleAnalytics = ""
 disqusShortname = ""
 ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
+
 
 [permalinks]
     post = "/:year/:month/:day/:slug/"
